[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pycoverplot"
version = "0.1.0"
description = "BAM coverage plot"
dependencies = [
    "numpy",
    "matplotlib",
    "gtf_pyparser @ git+https://github.com/rLannes/gtf_pyparser.git@master",
    "Rust_covpyo3 @ git+https://github.com/rLannes/Rust_covpyo3.git@master",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "Romain Lannes", email = "rlannes@wi.mit.edu" }
]
keywords = ["bioinformatics", "BAM", "visualisation", "plotting", "rnaseq",  "genomics", "Alignment"]
classifiers = [
    "Development Status :: 5 - Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]


[project.scripts]
pycoverplot = "pycoverplot.coverage_plot:main"
pycoverplot_gtf = "pycoverplot.coverage_plot:main_pkl"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycoverplot*"]

